# camper_user_service

./: .env.example  alembic.ini  docker-compose.yml  main.py  pyproject.toml
src/db/manager/: manager.py
src/db/migrations/: env.py
src/db/migrations/versions/: 5b704539c815_user_model_v1.py  6a6f919d7ea7_user_model_v2.py
src/db/mixins/: base.py  soft_delete_mixin.py  status_mixin.py  time_mixin.py  user_mixin.py
src/settings/: db.py  mail.py
src/user/: api.py  model.py  request.py  response.py
src/utils/: generate_otp.py  redis_cache.py  send_otp_email.py
